# claurst

./: .gitignore  README.md  cliff.toml
.github/workflows/: ci.yml  loci-analysis.yml  release.yml  security-audit.yml  sync-overlay.yml  template-setup.yml
docs/: index.html  index.md  live-execution-timeline.md
src-rust/: .clippy.toml  .dprint.json  .editorconfig  .licensesnip  .prettierrc.json  .rustfmt-nightly.toml  .rustfmt-stable.toml  .rustfmt.toml  .typos.toml  Cargo.toml  rust-toolchain.toml  test.rs  test_output.txt
src-rust/crates/api/src/: codex_adapter.rs  lib.rs  model_registry.rs  registry.rs
src-rust/crates/api/src/providers/: copilot.rs  minimax.rs  openai_compat.rs  openai_compat_providers.rs
src-rust/crates/cli/src/: codex_oauth_flow.rs  main.rs
src-rust/crates/commands/src/: lib.rs  named_commands.rs
src-rust/crates/core/src/: lib.rs  session_storage.rs  voice.rs
src-rust/crates/query/src/: agent_tool.rs  lib.rs
src-rust/crates/tools/src/: bash.rs  lib.rs  monitor_tool.rs  web_search.rs
src-rust/crates/tui/src/: agents_view.rs  app.rs  lib.rs  model_picker.rs  notifications.rs  onboarding_dialog.rs  render.rs  settings_screen.rs  timeline.rs
src-rust/crates/tui/src/messages/: mod.rs
src-rust/crates/tui/tests/: render_snapshots.rs
