[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/api",
    "crates/tools",
    "crates/query",
    "crates/tui",
    "crates/commands",
    "crates/mcp",
    "crates/bridge",
    "crates/cli",
    "crates/buddy",
    "crates/plugins",
    "crates/acp",
]

[workspace.package]
version = "0.0.8"
edition = "2021"
authors = ["Claurst"]
license = "GPL-3.0"
rust-version = "1.91.0"

[workspace.lints.rust]
ambiguous_negative_literals   = "warn"
missing_debug_implementations = "warn"
redundant_imports             = "warn"
redundant_lifetimes           = "warn"
trivial_numeric_casts         = "warn"
unexpected_cfgs               = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
unsafe_code                   = "warn"
unsafe_op_in_unsafe_fn        = "warn"
unused_lifetimes              = "warn"

[workspace.lints.clippy]
# Major categories
cargo       = { level = "warn", priority = -1 }
complexity  = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic    = { level = "warn", priority = -1 }
perf        = { level = "warn", priority = -1 }
style       = { level = "warn", priority = -1 }
suspicious  = { level = "warn", priority = -1 }

# Panic prevention
expect_used        = "warn"
panic              = "deny"
panic_in_result_fn = "deny"
unimplemented      = "deny"
unwrap_used        = "deny"

# No cheating
allow_attributes                = "deny"
allow_attributes_without_reason = "warn"

# Code hygiene
dbg_macro    = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo         = "deny"

# Safety
await_holding_lock         = "deny"
exit                       = "deny"
large_futures              = "deny"
mem_forget                 = "deny"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc     = "warn"

# Disallowed items (configured in .clippy.toml)
disallowed_macros  = "deny"
disallowed_methods = "deny"
disallowed_types   = "deny"

# Restriction lints for consistency
clone_on_ref_ptr                  = "warn"
empty_drop                        = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets       = "warn"
implicit_clone                    = "warn"
map_err_ignore                    = "warn"
redundant_type_annotations        = "warn"
renamed_function_params           = "warn"
unused_result_ok                  = "warn"

# Pedantic relaxations (too noisy)
module_name_repetitions = "allow"
similar_names           = "allow"

# Local lint changes
blanket_clippy_restriction_lints = "allow"
cast_possible_truncation         = "allow"
fn_to_numeric_cast_any           = "warn"
missing_errors_doc               = "allow" # FIXME!!
missing_panics_doc               = "allow" # FIXME!!
missing_safety_doc               = "warn"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
async-stream = "0.3"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream", "native-tls", "multipart"], default-features = false }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# TUI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
glob = "0.3"
walkdir = "2"
tempfile = "3"
dirs = "5"
which = "7"
once_cell = "1"
parking_lot = "0.12"
dashmap = "6"
indexmap = { version = "2", features = ["serde"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.2"
enigo = "0.2"
xcap = "0.0.13"
url = "2"
mime = "0.3"
urlencoding = "2"
open = "5"
qrcode = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
icy_sixel = "0.5"
image = { version = "0.25", features = ["png", "jpeg"] }

# Text processing
similar = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "html"] }
unicode-width = "0.2"
unicode-segmentation = "1"

# Process execution
nix = { version = "0.29", features = ["process", "signal", "user"] }

# Async channels
tokio-util = { version = "0.7", features = ["codec", "rt"] }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# JSON Schema
schemars = { version = "0.8", features = ["derive"] }

# Workspace crates
claurst-core = { path = "crates/core" }
claurst-acp = { path = "crates/acp" }
claurst-api = { path = "crates/api" }
claurst-tools = { path = "crates/tools" }
claurst-query = { path = "crates/query" }
claurst-tui = { path = "crates/tui" }
claurst-commands = { path = "crates/commands" }
claurst-mcp = { path = "crates/mcp" }
claurst-bridge = { path = "crates/bridge" }
claurst-buddy = { path = "crates/buddy" }
claurst-plugins = { path = "crates/plugins" }
